# MedAgentBenchmark-Purple

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test-and-publish.yml
client/: app.py  requirements.txt
med_data/: prefetched-fhir-task1.json
scripts/: manage_docker.sh  prefetch_task1_data.py  test_offline_fhir.py
src/: agent.py  executor.py  server.py
tests/: run_tests.py  test_agent.py  test_agent_heuristic.py
tests/simulation/: assessment.py  e2e_flow.py  sanity_check.py  test_curl.sh  test_local_integration.py  test_purple_payload.py
